{
  "version": 4,
  "terraform_version": "0.12.23",
  "serial": 21,
  "lineage": "951dfd46-35ae-b363-f348-e5353ceb1509",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-027292520c1fb18c6",
            "domain": "vpc",
            "id": "eipalloc-02b218c200074ccae",
            "instance": "i-0589ab72745e56c50",
            "network_interface": "eni-0e70a9978f6d3a8d8",
            "private_dns": "ip-10-10-1-180.ap-south-1.compute.internal",
            "private_ip": "10.10.1.180",
            "public_dns": "ec2-3-7-146-145.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.146.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.DevOps-Nat",
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-AppServer1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-0766975fac5ac37ab",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0766975fac5ac37ab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0daa0b406d56c49e3",
            "private_dns": "ip-10-10-3-195.ap-south-1.compute.internal",
            "private_ip": "10.10.3.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-039a05394eff96547",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08060c5839f0ef9bd",
            "tags": {
              "Name": "DevOps-AppServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.private-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-AppServer2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-009290dbe3da9ab2b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-009290dbe3da9ab2b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093cba1a55861ae79",
            "private_dns": "ip-10-10-4-194.ap-south-1.compute.internal",
            "private_ip": "10.10.4.194",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e15ddb974dd5808e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-045f8f145f0c5644a",
            "tags": {
              "Name": "DevOps-AppServer2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.private-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-Nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0361dc268daa6508c",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-0589ab72745e56c50",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0589ab72745e56c50",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e70a9978f6d3a8d8",
            "private_dns": "ip-10-10-1-180.ap-south-1.compute.internal",
            "private_ip": "10.10.1.180",
            "public_ip": "13.233.165.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "volume_id": "vol-04ae4659bb6b68360",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-05a8b1579450ee324",
            "tags": {
              "Name": "DevOps-Nat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-WebServer1",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-04324bac362feaa34",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04324bac362feaa34",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2f85ca8f108ff8b",
            "private_dns": "ip-10-10-1-120.ap-south-1.compute.internal",
            "private_ip": "10.10.1.120",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00fc17462edcb2c9d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a8b1579450ee324",
            "tags": {
              "Name": "DevOps-WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-08fb140e5add5cec2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08fb140e5add5cec2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f77e43596a2eef24",
            "private_dns": "ip-10-10-1-35.ap-south-1.compute.internal",
            "private_ip": "10.10.1.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02f5fb499eec9cccf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05a8b1579450ee324",
            "tags": {
              "Name": "DevOps-WebServer1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "DevOps-WebServer2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0620d12a9cf777c87",
            "arn": "arn:aws:ec2:ap-south-1:437350138466:instance/i-02de2e34584dd3385",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02de2e34584dd3385",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "MyLinuxAwskey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0de36c53043c1550b",
            "private_dns": "ip-10-10-2-191.ap-south-1.compute.internal",
            "private_ip": "10.10.2.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-02f70d14222dc5cc9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d34fc02b90f0e28a",
            "tags": {
              "Name": "DevOps-WebServer2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06040750e40f17e12"
            ]
          },
          "dependencies": [
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DevOps-IGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-054eca9717d9c33cc",
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-IGW"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Private-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-086179d68ce272d83",
            "owner_id": "437350138466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0589ab72745e56c50",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Private-RT"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_instance.DevOps-Nat",
            "aws_security_group.DevOps-EC2-SG",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DevOps-Public-RT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0871bafb430d6b7e8",
            "owner_id": "437350138466",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054eca9717d9c33cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DevOps-Public-RT"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f8845ca8bd5657b",
            "route_table_id": "rtb-0871bafb430d6b7e8",
            "subnet_id": "subnet-05a8b1579450ee324"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d91cdec33010272",
            "route_table_id": "rtb-0871bafb430d6b7e8",
            "subnet_id": "subnet-0d34fc02b90f0e28a"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.public-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0a8e159fff2cf5",
            "route_table_id": "rtb-0871bafb430d6b7e8",
            "subnet_id": "subnet-08060c5839f0ef9bd"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.private-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d6e812dcaa9840c",
            "route_table_id": "rtb-0871bafb430d6b7e8",
            "subnet_id": "subnet-045f8f145f0c5644a"
          },
          "dependencies": [
            "aws_internet_gateway.DevOps-IGW",
            "aws_route_table.DevOps-Public-RT",
            "aws_subnet.private-subnet",
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DevOps-EC2-SG",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:security-group/sg-06040750e40f17e12",
            "description": "Used in the terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06040750e40f17e12",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform_example",
            "name_prefix": null,
            "owner_id": "437350138466",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DevOps-EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-08060c5839f0ef9bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-08060c5839f0ef9bd",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Private-Subnet"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-045f8f145f0c5644a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-045f8f145f0c5644a",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Private-Subnet"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-05a8b1579450ee324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-05a8b1579450ee324",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Public-Subnet"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:subnet/subnet-0d34fc02b90f0e28a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0d34fc02b90f0e28a",
            "map_public_ip_on_launch": false,
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-Public-Subnet"
            },
            "vpc_id": "vpc-0d0eb1f4b0f6c5fe9"
          },
          "dependencies": [
            "aws_vpc.DevOps-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevOps-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:437350138466:vpc/vpc-0d0eb1f4b0f6c5fe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02d16b628ab6773e1",
            "default_route_table_id": "rtb-03de792a1fb170a87",
            "default_security_group_id": "sg-0f127c80f66d48866",
            "dhcp_options_id": "dopt-052e3f6d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0eb1f4b0f6c5fe9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03de792a1fb170a87",
            "owner_id": "437350138466",
            "tags": {
              "Name": "DevOps-VPC"
            }
          }
        }
      ]
    }
  ]
}